--- a/index.html
+++ b/index.html
@@ -47,7 +47,19 @@
                 <label for="symbols">Include Symbols</label>
                 <input type="checkbox" id="symbols" checked>
             </div>
-            <!--4:03 https://www.youtube.com/watch?v=kAiX0itnonM-->
+            
+        </div>
+
+        <button id="generate-btn">
+            <i class="fas fa-key"></i>
+            Generate Password
+        </button>
+
+        <div class="strength-container">
+            <p>Password Strength: <span id="stength-label">Medium</span></p>
+            <div class="strength-meter">
+                <div class="strength-bar"></div>
+            </div>
         </div>
     </div>
 
