--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </button>
 
         <div class="strength-container">
-            <p>Password Strength: <span id="stength-label">Medium</span></p>
+            <p>Password Strength: <span id="strength-label">Medium</span></p>
             <div class="strength-meter">
                 <div class="strength-bar"></div>
             </div>
